criei menu hamburgue responsivo e apliquei as outras páginas

--- a/assets/HTML/contact.html
+++ b/assets/HTML/contact.html
@@ -15,13 +15,13 @@
             <a class="navegacao__titulo" href="#">João Victor</a>
             <ul class="navegacao__menu">
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="index.html">Home</a>
+                    <a class="navegacao__link" href="/index.html">Home</a>
                 </li>
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="/assets/HTML/about.html">About</a>
+                    <a class="navegacao__link" href="about.html">About</a>
                 </li>
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="/assets/HTML/contact.html">Contact</a>
+                    <a class="navegacao__link" href="contact.html">Contact</a>
                 </li>
             </ul>
             <div class="menu__hamburgue">
@@ -31,26 +31,9 @@
             </div>
     </header>
     <main>
-        <section>
-            <h1></h1>
-            <p></p>
-            <div></div>
-            <h2></h2>
-            <div>
-                <a href=""><img src="" alt="" srcset=""></a>
-                <a href=""><img src="" alt="" srcset=""></a>
-                <a href=""><img src="" alt="" srcset=""></a>
-                <a href=""><img src="" alt="" srcset=""></a>
-            </div>
-        </section>
-        <section>
-            <img src="" alt="" srcset="">
-        </section>
-        <footer>
-            <p></p>
-        </footer>
-    </main>
-    <script src="assets/JS/hamburger-menu.js"></script>
-</body>
 
+    </main>
+    <footer></footer>
+    <script src="/assets/JS/hamburger-menu.js"></script>
+</body>
 </html>
