--- a/index.html
+++ b/index.html
@@ -4,50 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/IMG/person-fill.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/IMG/code-slash.svg" type="image/x-icon">
     <link rel="stylesheet" href="/assets/CSS/style.css">
     <title>João Victor</title>
 </head>
 
 <body>
-    <header>
+    <header class="cabecalho">
         <nav class="navegacao__barra">
-            <a class="navegacao__titulo" href="#">João Victor</a>
+            <a class="navegacao__titulo" href="index.html"><img class="icone__dev" src="/assets/IMG/code-slash.svg"
+                    alt="simbolo barra de código">Dev. Front-End</a>
             <ul class="navegacao__menu">
                 <li class="navegacao__item">
                     <a class="navegacao__link" href="index.html">Home</a>
                 </li>
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="/assets/HTML/about.html">About</a>
+                    <a class="navegacao__link" href="/assets/HTML/about.html">About Me</a>
                 </li>
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="/assets/HTML/contact.html">Contact</a>
+                    <a class="navegacao__link" href="/assets/HTML/contact.html">Contact Me</a>
                 </li>
             </ul>
             <div class="menu__hamburgue">
-                <samp class="bar"></samp>
-                <samp class="bar"></samp>
-                <samp class="bar"></samp>
+                <samp class="barra"></samp>
+                <samp class="barra"></samp>
+                <samp class="barra"></samp>
             </div>
     </header>
     <main>
-        <section>
-            <h1></h1>
-            <p></p>
-            <div></div>
-            <h2></h2>
-            <div>
-                <a href=""><img src="" alt="" srcset=""></a>
-                <a href=""><img src="" alt="" srcset=""></a>
-                <a href=""><img src="" alt="" srcset=""></a>
-                <a href=""><img src="" alt="" srcset=""></a>
+        <section class="sessao1">
+            <div class="minha__foto">
+                <img class="foto" src="/assets/IMG/foto.jpg" alt="foto de João Victor">
             </div>
+            <span class="meu__nome">João Victor Alves</span>
         </section>
-        <section>
-            <img src="" alt="" srcset="">
+        <section class="sessao2">
+            <a class="link__redes" href="https://www.github.com/alvesjaov"><img class="icone__redes"
+                    src="/assets/IMG/github-icon.svg" alt="icone do GitHub">GitHub</a>
+            <a class="link__redes" href="https://www.linkedin.com/in/alvesjaov"><img class="icone__redes"
+                    src="/assets/IMG/linkedin-icon.svg" alt="icone do LinkedIn">LinkedIn</a>
+            <a class="link__redes" href="https://www.instagram.com/alvesjaov"><img class="icone__redes"
+                    src="/assets/IMG/instagram-icon.svg" alt="icone do Instagram">Instagram</a>
+        </section>
+        <section class="sessao3">
+            
         </section>
         <footer>
-            <p></p>
+           
         </footer>
     </main>
     <script src="assets/JS/hamburger-menu.js"></script>
