--- a/assets/HTML/contact.html
+++ b/assets/HTML/contact.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/IMG/person-fill.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/IMG/code-slash.svg" type="image/x-icon">
     <link rel="stylesheet" href="/assets/CSS/style.css">
     <title>João Victor</title>
 </head>
 
 <body>
-    <header>
+    <header class="cabecalho">
         <nav class="navegacao__barra">
-            <a class="navegacao__titulo" href="#">João Victor</a>
+            <a class="navegacao__titulo" href="/index.html"><img class="icone__dev" src="/assets/IMG/code-slash.svg" alt="simbolo barra de código">Dev. Front-End</a>
             <ul class="navegacao__menu">
                 <li class="navegacao__item">
                     <a class="navegacao__link" href="/index.html">Home</a>
@@ -25,9 +25,9 @@
                 </li>
             </ul>
             <div class="menu__hamburgue">
-                <samp class="bar"></samp>
-                <samp class="bar"></samp>
-                <samp class="bar"></samp>
+                <samp class="barra"></samp>
+                <samp class="barra"></samp>
+                <samp class="barra"></samp>
             </div>
     </header>
     <main>
