--- a/assets/HTML/about.html
+++ b/assets/HTML/about.html
@@ -5,23 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/assets/IMG/code-slash.svg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/CSS/style.css">
-    <title>João Victor</title>
+    <title>JSobre mimr</title>
 </head>
 
 <body>
     <header class="cabecalho">
         <nav class="navegacao__barra">
-            <a class="navegacao__titulo" href="/index.html"><img class="icone__dev" src="/assets/IMG/code-slash.svg" alt="simbolo barra de código">Dev. Front-End</a>
+            <a class="navegacao__titulo" href="index.html"><img class="icone__dev" src="/assets/IMG/code-slash.svg"
+                    alt="simbolo barra de código">Dev. Front-End</a>
             <ul class="navegacao__menu">
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="/index.html">Home</a>
+                    <a class="navegacao__link" href="index.html">Home</a>
                 </li>
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="about.html">About</a>
+                    <a class="navegacao__link" href="/assets/HTML/about.html">Sobre mim</a>
                 </li>
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="/assets/HTML/contact.html">Contact</a>
+                    <a class="navegacao__link" href="/assets/HTML/contact.html">Contato</a>
                 </li>
             </ul>
             <div class="menu__hamburgue">
@@ -31,9 +35,9 @@
             </div>
     </header>
     <main>
-
     </main>
     <footer></footer>
     <script src="/assets/JS/hamburger-menu.js"></script>
 </body>
+
 </html>
