--- a/assets/HTML/contact.html
+++ b/assets/HTML/contact.html
@@ -5,23 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/assets/IMG/code-slash.svg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/CSS/style.css">
-    <title>João Victor</title>
+    <title>Contato</title>
 </head>
 
 <body>
     <header class="cabecalho">
         <nav class="navegacao__barra">
-            <a class="navegacao__titulo" href="/index.html"><img class="icone__dev" src="/assets/IMG/code-slash.svg" alt="simbolo barra de código">Dev. Front-End</a>
+            <a class="navegacao__titulo" href="/index.html"><img class="icone__dev" src="/assets/IMG/code-slash.svg"
+                    alt="simbolo barra de código">Dev. Front-End</a>
             <ul class="navegacao__menu">
                 <li class="navegacao__item">
                     <a class="navegacao__link" href="/index.html">Home</a>
                 </li>
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="about.html">About</a>
+                    <a class="navegacao__link" href="/assets/html/about.html">Sobre mim</a>
                 </li>
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="contact.html">Contact</a>
+                    <a class="navegacao__link" href="/assets/html/contact.html">Contato</a>
                 </li>
             </ul>
             <div class="menu__hamburgue">
@@ -30,10 +34,33 @@
                 <samp class="barra"></samp>
             </div>
     </header>
-    <main>
 
-    </main>
+    <div class="content">
+        <h1 class="content__titulo">CONTATO</h1>
+
+        <form id="form" class="formulario">
+
+            <label for="nome" class="labels">Nome:</label>
+            <input type="text" id="nome" name="name" placeholder="Digite seu Nome" class="inputs required"
+                oninput="nameValidate()">
+
+            <span class="span-required">O nome precisa ter pelo menos 4 caracteres</span>
+            <label for="email" class="labels">Email:</label>
+            <input type="email" id="email" name="email" placeholder="Digite seu Email" class="inputs required"
+                oninput="emailValidate()">
+
+            <span class="span-required">Digite um email valido</span>
+            <label for="mensagem" class="labels">Mensagem:</label>
+            <textarea name="message" id="mensagem" cols="25" rows="10" placeholder="Escrever mensagem..."
+                class="inputs required"></textarea>
+
+            <button type="submit" class="botao">Enviar</button>
+        </form>
+    </div>
+
     <footer></footer>
     <script src="/assets/JS/hamburger-menu.js"></script>
+    <script src="/assets/JS/forms-required.js"></script>
 </body>
+
 </html>
