--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="/assets/IMG/code-slash.svg" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/CSS/style.css">
-    <title>João Victor</title>
+    <title>João Victor Alves</title>
 </head>
 
 <body>
@@ -19,10 +22,10 @@
                     <a class="navegacao__link" href="index.html">Home</a>
                 </li>
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="/assets/HTML/about.html">About Me</a>
+                    <a class="navegacao__link" href="/assets/HTML/about.html">Sobre mim</a>
                 </li>
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="/assets/HTML/contact.html">Contact Me</a>
+                    <a class="navegacao__link" href="/assets/HTML/contact.html">Contato</a>
                 </li>
             </ul>
             <div class="menu__hamburgue">
@@ -47,10 +50,9 @@
                     src="/assets/IMG/instagram-icon.svg" alt="icone do Instagram">Instagram</a>
         </section>
         <section class="sessao3">
-            
+
         </section>
         <footer>
-           
         </footer>
     </main>
     <script src="assets/JS/hamburger-menu.js"></script>
