corrigindo links das pastas

--- a/assets/HTML/about.html
+++ b/assets/HTML/about.html
@@ -4,28 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/img/code-slash.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/IMG/code-slash.svg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <title>JSobre mimr</title>
+    <link rel="stylesheet" href="/assets/CSS/style.css">
+    <title>Sobre mim</title>
 </head>
 
 <body>
     <header class="cabecalho">
         <nav class="navegacao__barra">
-            <a class="navegacao__titulo" href="index.html"><img class="icone__dev" src="/assets/img/code-slash.svg"
+            <a class="navegacao__titulo" href="index.html"><img class="icone__dev" src="/assets/IMG/code-slash.svg"
                     alt="simbolo barra de código">Dev. Front-End</a>
             <ul class="navegacao__menu">
                 <li class="navegacao__item">
                     <a class="navegacao__link" href="index.html">Home</a>
                 </li>
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="/assets/html/about.html">Sobre mim</a>
+                    <a class="navegacao__link" href="/assets/HTML/about.html">Sobre mim</a>
                 </li>
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="/assets/hmtl/contact.html">Contato</a>
+                    <a class="navegacao__link" href="/assets/HTML/contact.html">Contato</a>
                 </li>
             </ul>
             <div class="menu__hamburgue">
@@ -37,7 +37,7 @@
     <main>
     </main>
     <footer></footer>
-    <script src="/assets/js/hamburger-menu.js"></script>
+    <script src="/assets/JS/hamburger-menu.js"></script>
 </body>
 
 </html>
