--- a/assets/HTML/about.html
+++ b/assets/HTML/about.html
@@ -19,7 +19,7 @@
                     alt="simbolo barra de código">Dev. Front-End</a>
             <ul class="navegacao__menu">
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="index.html">Home</a>
+                    <a class="navegacao__link" href="/index.html">Home</a>
                 </li>
                 <li class="navegacao__item">
                     <a class="navegacao__link" href="/assets/HTML/about.html">Sobre mim</a>
