corrigindo responsivo do forms

--- a/assets/HTML/contact.html
+++ b/assets/HTML/contact.html
@@ -52,7 +52,7 @@
             <span class="span-required">Digite um email valido</span>
             <label for="mensagem" class="labels">Mensagem:</label>
             <textarea name="message" id="mensagem" cols="25" rows="10" placeholder="Escrever mensagem..."
-                class="inputs required"></textarea>
+                class="inputs required textnone"></textarea>
 
             <button type="submit" class="botao">Enviar</button>
         </form>
