--- a/assets/HTML/contact.html
+++ b/assets/HTML/contact.html
@@ -51,7 +51,7 @@
 
             <span class="span-required">Digite um email valido</span>
             <label for="mensagem" class="labels">Mensagem:</label>
-            <textarea name="message" id="mensagem" cols="25" rows="10" placeholder="Escrever mensagem..."
+            <textarea name="message" id="mensagem" cols="25" rows="10" maxlength="880" placeholder="Escrever mensagem..."
                 class="inputs required textnone"></textarea>
 
             <button type="submit" class="botao">Enviar</button>
