--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/CSS/style.css">
-    <title>João Victor Alves</title>
+    <title>João Victor Alves | Front-end Developer</title>
 </head>
 
 <body>
     <header class="cabecalho fixed">
         <nav class="navegacao__barra">
-            <a class="navegacao__titulo" href="index.html"><img class="icone__dev" src="/assets/IMG/code-slash.svg"
-                    alt="simbolo barra de código">Dev. Front-End</a>
+            <a class="navegacao__titulo" href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="icone__dev" viewBox="0 0 16 16">
+                <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z"/>
+              </svg>Dev. Front-End</a>
             <ul class="navegacao__menu">
                 <li class="navegacao__item">
                     <a class="navegacao__link" href="#sessao1__informacoes">Inicio</a>
