ajustando vh das sections

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a class="navegacao__link" href="#sessao1__informacoes">Inicio</a>
                 </li>
                 <li class="navegacao__item">
-                    <a class="navegacao__link" href="#sobre__mim">Sobre mim</a>
+                    <a class="navegacao__link" href="#sessao2__sobre_mim">Sobre mim</a>
                 </li>
                 <li class="navegacao__item">
                     <a class="navegacao__link" href="#sessao4__contato">Contato</a>
@@ -40,7 +40,7 @@
             <div class="minha__foto">
                 <img class="foto" src="/assets/IMG/foto.jpg" alt="foto de João Victor">
             </div>
-            <span class="meu__nome">João Victor Alves</span>
+            <h1 class="meu__nome">João Victor Alves</h1>
             <div class="redes__socias">
                 <a class="link__redes" href="https://www.github.com/alvesjaov"><svg xmlns="http://www.w3.org/2000/svg"
                         class="icone__redes" width="16" height="16" viewBox="0 0 16 16" alt="icone do GitHub">
@@ -63,7 +63,9 @@
         </section>
 
         <section id="sessao2__sobre_mim">
-            <div class="sobre__min"></div>
+            <div class="sobre__mim">
+                <h1 class="sobre__mim_titulo"> Sobre mim</h1>
+            </div>
         </section>
 
         <section id="sessao4__contato">
