ajuste nos icones e tamnhos de texto

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
     <header class="header">
         <nav class="navigation__bar">
-            <span class="navigation__title"><svg xmlns="http://www.w3.org/2000/svg"
-                    width="16" height="16" class="icon__dev" viewBox="0 0 16 16">
+            <span class="navigation__title"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                    class="icon__dev" viewBox="0 0 16 16">
                     <path
                         d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z" />
                 </svg>Dev. Front-End</span>
@@ -41,11 +41,15 @@
     <main>
         <section id="section1__information">
             <div class="my__picture">
-                <img class="picture" src="/assets/IMG/picuture.jpg" alt="foto de João Victor">
+                <img class="picture" src="/assets/IMG/my-picture.svg" alt="foto de João Victor">
             </div>
             <h1 class="my__name">João Victor Alves</h1>
             <a class="lacation" href="https://maps.app.goo.gl/dFtgyrxJ11iww1k69 " target="_blank"
-                rel="noopener noreferrer">Brumado-Bahia, Brasil 📍</a>
+                rel="noopener noreferrer">Brumado-Bahia, Brasil <svg class="location__icon" width="16" height="16"
+                    viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M12,2.06a5.5,5.5,0,0,0-.5,10.97v8.41a.5.5,0,0,0,.5.5.5.5,0,0,0,.5-.5V13.03A5.5,5.5,0,0,0,12,2.06Zm0,10a4.5,4.5,0,1,1,4.5-4.5A4.5,4.5,0,0,1,12,12.06Z" />
+                </svg></a>
             <div class="social__medias">
                 <a class="social__medias_link" href="https://www.github.com/alvesjaov" target="_blank"
                     rel="noopener noreferrer"><svg xmlns="http://www.w3.org/2000/svg" class="social__icon" width="16"
@@ -77,14 +81,24 @@
                     inovações. Como um leitor ávido, acredito que a leitura é uma maneira de expandir meus horizontes e
                     enriquecer minha mente. Atualmente, estou aprendendo a me tornar um desenvolvedor
                     full-stack. No front-end, estou me familiarizado com tecnologias como HTML, CSS e JavaScript. No
-                    back-end, estou adquirindo experiência com Java e Angular. Sempre buscando aprimorar minhas habilidades nessas áreas.</p>
+                    back-end, estou adquirindo experiência com Java e Angular. Sempre buscando aprimorar minhas
+                    habilidades nessas áreas.</p>
             </div>
         </section>
 
         <section id="section5__contact">
             <div class="contact">
                 <h1 class="contact__titele">Contato</h1>
-                <h3 class="contact__subtitele">Me envie uma mensagem! ✉️</h3>
+                <h3 class="contact__subtitele">Me envie uma mensagem! <svg class="message__icon" xmlns="
+                        http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16" height="16"
+                        viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+                        <path d="M60,8H4c-2.211,0-4,1.789-4,4v40c0,2.211,1.789,4,4,4h56c2.211,0,4-1.789,4-4V12C64,9.789,62.211,8,60,8z
+                    M4,10h56c1.104,0,2,0.896,2,2v2.469L32,36.754L2,14.469V12C2,10.896,2.896,10,4,10z M60,54H4c-1.104,0-2-0.896-2-2v-2.808
+                   l18.584-13.381c0.448-0.322,0.55-0.947,0.228-1.396c-0.322-0.447-0.946-0.549-1.396-0.228L2,46.729V16.961l29.403,21.842
+                   C31.581,38.935,31.79,39,32,39s0.419-0.065,0.597-0.197L62,16.961v29.768l-17.416-12.54c-0.448-0.322-1.074-0.221-1.396,0.228
+                   c-0.322,0.448-0.221,1.073,0.228,1.396L62,49.192V52C62,53.104,61.104,54,60,54z" />
+                    </svg>
+                    </svg></h3>
                 <form id="form" class="form">
 
                     <label for="nome" class="labels">Nome:</label>
