troquei template do form e tire focus do botão da mensagem de confirmação

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 id="form" class="form">
                 <input type="hidden" name="_subject" value="Novo envio!">
                 <input type="hidden" name="_captcha" value="false">
-                <input type="hidden" name="_template" value="box">
+                <input type="hidden" name="_template" value="basic">
 
                 <label for="name" class="labels">Nome:</label>
                 <input type="text" id="name" name="name" placeholder="Digite seu Nome" class="inputs required"
