ajustes na cor do títulos

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <div class="about__me_experience">
                 <h1 class="experience__title"> Experiência profissionais</h1>
-                <h3 class="experience__subtitle">Apontador de ProduçãoApontador de Produção</h3>
+                <h3 class="experience__subtitle">Apontador de Produção</h3>
                 <p class="experience__text">RHI Magnesita · AprendizRHI Magnesita · Aprendiz · abr de 2021 - jul de 2022
                     · 1 ano 4 meses - Brumado </p>
                 <h3 class="experience__subtitle">Auxiliar de escritório em geral</h3>
@@ -128,8 +128,8 @@
         <section id="section5__contact">
             <div data-message-box></div>
             <div class="contact">
-                <h1 class="contact__titele">Contato</h1>
-                <h3 class="contact__subtitele">Me envie uma mensagem! <svg class="message__icon" xmlns="
+                <h1 class="contact__title">Contato</h1>
+                <h3 class="contact__subtitle">Me envie uma mensagem! <svg class="message__icon" xmlns="
                         http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="16" height="16"
                         viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
                         <path d="M60,8H4c-2.211,0-4,1.789-4,4v40c0,2.211,1.789,4,4,4h56c2.211,0,4-1.789,4-4V12C64,9.789,62.211,8,60,8z
