retirando código repetido

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                 <label for="mensagem" class="labels">Mensagem:</label>
                 <textarea name="message" id="mensagem" cols="25" rows="10" maxlength="880"
-                    placeholder="Escrever mensagem..." class="inputs required textnone"></textarea>
+                    placeholder="Escrever mensagem..." class="inputs required text__area"></textarea>
 
                 <button type="submit" data-button class="button">Enviar</button>
             </form>
