adicionei mais ícones a tecnologias, pequenos ajustes no responsivo

--- a/index.html
+++ b/index.html
@@ -75,14 +75,19 @@
                 <span class="programming__tech_title">Tecnologias</span>
                 <ul class="programming__languages">
                     <li><img class="languages__icons"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
+                            src="/assets/IMG/html5-icon.svg"
                             alt="Ícone HTML" title="HTML5" /></li>
                     <li><img class="languages__icons"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg"
+                            src="/assets/IMG/css3-icon.svg"
                             alt="Ícone CSS" title="CSS3" /></li>
                     <li><img class="languages__icons"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+                            src="/assets/IMG/javascript-icon.svg"
                             alt="Ícone JavaScript" title="JavaScript" /></li>
+                </ul>
+                <ul class="programming__languages">
+                    <li><img class="languages__icons" src="/assets/IMG/figma-ico.svg" alt="Ícone do Figma" title="Figma"></li>
+                    <li><img class="languages__icons" src="/assets/IMG/git-icon.svg" alt="Ícone do Git" title="Git"></li>
+                    <li><img class="languages__icons" src="/assets/IMG/github-icon.svg" alt="Ícone do GitHub" title="GitHub"></li>
                 </ul>
             </div>
 
