fiz a página de certificados (ainda falta fazer a descrição de 5)

--- a/assets/HTML/certificates.html
+++ b/assets/HTML/certificates.html
@@ -13,17 +13,128 @@
 </head>
 
 <body>
-    <header class="header">
-        <nav class="navigation__bar">
-            <span class="navigation__title"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                    class="icon__dev" viewBox="0 0 16 16">
-                    <path
-                        d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294l4-13zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0zm6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0z" />
-                </svg>Dev. Front-End</span>
+    <header class="header__certificate">
+        <h1 class="certificates__title">Meus Certificados</h1>
     </header>
     <main>
+        <section id="section5__certificates">
+            <div class="certificates">
+                <div class="certificates__box">
+                    <iframe class="certificates__pdf"
+                        src="https://drive.google.com/file/d/1ODibchEprIGc19OVUpR9DwByB6cyBDDR/preview"
+                        title="Tech in Microsoft"></iframe>
+                    <div class="description">
+                        <h2>Tech in Microsoft</h2>
+                        <p id="lessText1">Esse é um projeto de extensão que<span id="dots1">...</span><span id="moreText1"
+                            style="display: none;"> tem o intuito de inserir os alunos nas trilhas de
+                            formação da Microsoft tanto com o objetivo de aprofundar
+                            os conhecimentos nas tecnologias Microsoft, requeridas pelo mercado de trabalho, quanto
+                            de capacitar nossos alunos para inovarem e buscarem soluções diferenciadas na área de
+                            TI&C com tecnologias dessa big tech. Além disso, esse projeto será um efetivo apoio para
+                            a compreensão de competências relativas à inteligência artificial, que são requeridas na
+                            UC de Inteligência Artificial de TI&C.</span>
+                            <button onclick="myFunction('moreText1', 'dots1', 'myBtn1')" id="myBtn1">Ler mais</button>
+                        </p>
+                        <p class="description__course_workload"> Carga horária: 60h</p>
+                    </div>
+                </div>
 
+                <div class="certificates__box">
+                    <iframe class="certificates__pdf"
+                        src="https://drive.google.com/file/d/1e5BvH5lE5A2xUbNtOmmOIPX9-bh-idXF/preview"
+                        title="AWS academy"></iframe>
+                    <div class="description">
+                        <h2>AWS academy</h2>
+                        <p id="lessText2">Currículo de computação na nuvem<span id="dots2">...</span><span
+                                id="moreText2" style="display: none;"> com cursos nas categorias: fundamentos de
+                                nuvem, operações de
+                                nuvem, arquiteturas e desenvolvimento de nuvens
+                                e, análise de dados em nuvem.</span>
+                            <button onclick="myFunction('moreText2', 'dots2', 'myBtn2')" id="myBtn2">Ler mais</button>
+                            <br>
+                        <p class="description__course_workload"> Carga horária: 60h</p>
+                    </div>
+                </div>
+
+                <div class="certificates__box">
+                    <iframe class="certificates__pdf"
+                        src="https://drive.google.com/file/d/1nLKs8Lll2QxcIUQqquPXfP49UdHBBRhE/preview"
+                        title="Java Foundations da Oracle Academy"></iframe>
+                    <div class="description">
+                        <h2>Java Foundations - Oracle Academy</h2>
+                        <p id class="lessText3">O curso Java Foundations<span id="dots3">...</span><span id="moreText3"
+                                style="display: none;"> da Oracle Academy é um programa abrangente que
+                                introduz os alunos
+                                aos conceitos de programação orientada a
+                                objetos, terminologia e sintaxe, além dos passos
+                                necessários para criar programas Java básicos. O curso cobre tópicos como o processo de
+                                desenvolvimento de software, tipos de dados em Java, métodos e classes de biblioteca em
+                                Java, declarações de decisão, construções de loop, criação de classes, interação entre
+                                objetos e encapsulamento, arrays e exceções, conceitos e técnicas de depuração e uma
+                                introdução ao JavaFX. Com uma duração total recomendada de 90 horas, o curso é adequado
+                                para
+                                estudantes que desejam aprender programação em Java e construir sua experiência em
+                                programação orientada a objetos usando Java.
+                            </span>
+                            <button onclick="myFunction('moreText3', 'dots3', 'myBtn3')" id="myBtn3">Ler mais</button>
+                            <br>
+                        <p class="description__course_workload"> Carga horária: 90h</p>
+                    </div>
+                </div>
+                <div class="certificates__box">
+                    <iframe class="certificates__pdf"
+                        src="https://drive.google.com/file/d/1k1ZglJPFQl1-n-XwB0Ei_Gm6mN7RWLYC/preview"
+                        title="Certificado 4"></iframe>
+                    <div class="description">
+                        <h2>Descrição do Certificado 4</h2>
+                        <p>Este é o certificado de conclusão do curso XYZ. Foi emitido em [data] e é válido até [data].
+                        </p>
+                    </div>
+                </div>
+                <div class="certificates__box">
+                    <iframe class="certificates__pdf"
+                        src="https://drive.google.com/file/d/1TYXIrmcHYTVgyEUogunPlBvNH8T6bv0H/preview"
+                        title="Certificado 5"></iframe>
+                    <div class="description">
+                        <h2>Descrição do Certificado 5</h2>
+                        <p>Este é o certificado de conclusão do curso XYZ. Foi emitido em [data] e é válido até [data].
+                        </p>
+                    </div>
+                </div>
+                <div class="certificates__box">
+                    <iframe class="certificates__pdf"
+                        src="https://drive.google.com/file/d/1HlAmBE8_4DVSX8I1yVjSoCGfHSfNUsxR/preview"
+                        title="Certificado 6"></iframe>
+                    <div class="description">
+                        <h2>Descrição do Certificado 6</h2>
+                        <p>Este é o certificado de conclusão do curso XYZ. Foi emitido em [data] e é válido até [data].
+                        </p>
+                    </div>
+                </div>
+                <div class="certificates__box">
+                    <iframe class="certificates__pdf"
+                        src="https://drive.google.com/file/d/1GQiSVULUI0w7ep6We47AapIujK40y8l8/preview"
+                        title="Certificado 7"></iframe>
+                    <div class="description">
+                        <h2>Descrição do Certificado 7</h2>
+                        <p>Este é o certificado de conclusão do curso XYZ. Foi emitido em [data] e é válido até [data].
+                        </p>
+                    </div>
+                </div>
+                <div class="certificates__box">
+                    <iframe class="certificates__pdf"
+                        src="https://drive.google.com/file/d/1RZUEhgv1mYtRCecIMXVcoh_HujP_x5Td/preview"
+                        title="Certificado 8"></iframe>
+                    <div class="description">
+                        <h2>Descrição do Certificado 8</h2>
+                        <p>Este é o certificado de conclusão do curso XYZ. Foi emitido em [data] e é válido até [data].
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
     <footer class="footer">
         <div class="footer__title">
             <p> 2023 Copyright ©. Todos os direitos reservados</p>
@@ -49,9 +160,9 @@
                 </svg></a>
         </div>
     </footer>
+
     </main>
-    <script src="/assets/JS/hamburger-menu.js"></script>
-    <script src="/assets/JS/forms-required-dipach.js"></script>
+    <script src="/assets/JS/read-more-less-button.js"></script>
 </body>
 
 </html>
