estilizando botão voltar para cima e pagina certificado

--- a/assets/HTML/certificate.html
+++ b/assets/HTML/certificate.html
@@ -14,13 +14,14 @@
 
 <body>
     <header class="header__certificate" id="#top">
-        <h1 class="certificates__title">Meus Certificados</h1>
+        <h1 class="certificate__title">Meus Certificados</h1>
     </header>
+    
     <main>
-        <section id="section5__certificates">
-            <div class="certificates">
-                <div class="certificates__box">
-                    <iframe class="certificates__pdf"
+        <section id="section5__certificate">
+            <div class="certificate">
+                <div class="certificate__box">
+                    <iframe class="certificate__pdf"
                         src="https://drive.google.com/file/d/1TYXIrmcHYTVgyEUogunPlBvNH8T6bv0H/preview"
                         title="PROJETO LIDERANDO"></iframe>
                     <div class="description">
@@ -37,8 +38,8 @@
                     </div>
                 </div>
 
-                <div class="certificates__box">
-                    <iframe class="certificates__pdf"
+                <div class="certificate__box">
+                    <iframe class="certificate__pdf"
                         src="https://drive.google.com/file/d/1e5BvH5lE5A2xUbNtOmmOIPX9-bh-idXF/preview"
                         title="AWS academy"></iframe>
                     <div class="description">
@@ -53,8 +54,8 @@
                     </div>
                 </div>
 
-                <div class="certificates__box">
-                    <iframe class="certificates__pdf"
+                <div class="certificate__box">
+                    <iframe class="certificate__pdf"
                         src="https://drive.google.com/file/d/1ODibchEprIGc19OVUpR9DwByB6cyBDDR/preview"
                         title="Tech in Microsoft"></iframe>
                     <div class="description">
@@ -74,8 +75,8 @@
                 </div>
 
 
-                <div class="certificates__box">
-                    <iframe class="certificates__pdf"
+                <div class="certificate__box">
+                    <iframe class="certificate__pdf"
                         src="https://drive.google.com/file/d/1k1ZglJPFQl1-n-XwB0Ei_Gm6mN7RWLYC/preview"
                         title="Programming Introduction (Oracle)"></iframe>
                     <div class="description">
@@ -95,8 +96,8 @@
                 </div>
 
 
-                <div class="certificates__box">
-                    <iframe class="certificates__pdf"
+                <div class="certificate__box">
+                    <iframe class="certificate__pdf"
                         src="https://drive.google.com/file/d/1nLKs8Lll2QxcIUQqquPXfP49UdHBBRhE/preview"
                         title="Java Foundations da Oracle Academy"></iframe>
                     <div class="description">
@@ -120,8 +121,8 @@
                     </div>
                 </div>
 
-                <div class="certificates__box">
-                    <iframe class="certificates__pdf"
+                <div class="certificate__box">
+                    <iframe class="certificate__pdf"
                         src="https://drive.google.com/file/d/1GQiSVULUI0w7ep6We47AapIujK40y8l8/preview"
                         title="Assistente de Produção"></iframe>
                     <div class="description">
@@ -140,8 +141,8 @@
                     </div>
                 </div>
 
-                <div class="certificates__box">
-                    <iframe class="certificates__pdf"
+                <div class="certificate__box">
+                    <iframe class="certificate__pdf"
                         src="https://drive.google.com/file/d/1HlAmBE8_4DVSX8I1yVjSoCGfHSfNUsxR/preview"
                         title="Diploma Técnico em Comércio"></iframe>
                     <div class="description">
@@ -165,8 +166,8 @@
                 </div>
 
 
-                <div class="certificates__box">
-                    <iframe class="certificates__pdf"
+                <div class="certificate__box">
+                    <iframe class="certificate__pdf"
                         src="https://drive.google.com/file/d/1RZUEhgv1mYtRCecIMXVcoh_HujP_x5Td/preview"
                         title="Certificado 8"></iframe>
                     <div class="description">
@@ -220,7 +221,7 @@
             src="/assets/IMG/arrowUP.svg" alt="Botão para voltar para o topo"></button>
 
     <script src="/assets/JS/read-more-less-button.js"></script>
-    <script src="/assets/JS/button-scrrol-top.js"></script>
+    <script src="/assets/JS/button-scroll-top.js"></script>
 
 </body>
 
