--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </li>
 
                 <li class="navigation__item">
-                    <a class="navigation__link" href="#section4__contact">Contato</a>
+                    <a class="navigation__link" href="#section7__contact">Contato</a>
                 </li>
             </ul>
             <div class="hamburger__menu">
@@ -44,6 +44,7 @@
             <div class="my__picture">
                 <img class="picture" src="/assets/IMG/my-picture.svg" alt="foto de João Victor">
             </div>
+
             <h1 class="my__name">João Victor Alves</h1>
             <a class="location" href="https://maps.app.goo.gl/dFtgyrxJ11iww1k69 " target="_blank"
                 rel="noopener noreferrer">Brumado-Bahia, Brasil <svg class="location__icon" width="16" height="16"
@@ -51,6 +52,7 @@
                     <path
                         d="M12,2.06a5.5,5.5,0,0,0-.5,10.97v8.41a.5.5,0,0,0,.5.5.5.5,0,0,0,.5-.5V13.03A5.5,5.5,0,0,0,12,2.06Zm0,10a4.5,4.5,0,1,1,4.5-4.5A4.5,4.5,0,0,1,12,12.06Z" />
                 </svg></a>
+
             <div class="social__medias">
                 <a class="social__medias_link" href="https://www.github.com/alvesjaov" target="_blank"
                     rel="noopener noreferrer" title="GitHub"><svg xmlns="http://www.w3.org/2000/svg"
@@ -71,6 +73,7 @@
                             d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
                     </svg></a>
             </div>
+
             <div class="programming__tech">
                 <span class="programming__tech_title">Tecnologias</span>
                 <ul class="programming__languages">
@@ -114,9 +117,9 @@
                 <h3 class="education__subtitle">CEEP em Gestão e Meio Ambiente</h3>
                 <p class="education__text"> Técnico Integrado, Comércio
                     fev de 2015 - dez de 2019</p>
-                <a class="about__me_certificates" href="/assets/HTML/certificates.html" target="_blank"
+                <a class="about__me_certificate" href="/assets/HTML/certificate.html" target="_blank"
                     rel="noopener noreferrer">Certificados<svg width="16" height="16" viewBox="0 0 16 16"
-                        xmlns="http://www.w3.org/2000/svg" class="certificates__icon">
+                        xmlns="http://www.w3.org/2000/svg" class="certificate__icon">
                         <path fill="#000000"
                             d="M12.943 3.463A.748.748 0 0012.25 3h-5.5a.75.75 0 000 1.5h3.69l-7.22 7.22a.75.75 0 101.06 1.06l7.22-7.22v3.69a.75.75 0 001.5 0v-5.5a.747.747 0 00-.057-.287z" />
                     </svg></a>
@@ -144,7 +147,7 @@
             </div>
         </section>
 
-        <section id="section4__contact">
+        <section id="section7__contact">
             <div data-message-box></div>
             <div class="contact">
                 <h1 class="contact__title">Contato</h1>
